[package]
name = "zui-window"
version = "0.0.0"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/zed-ui"
documentation = "https://docs.rs/zui-window"
edition = "2018"
keywords = ["zed", "ui", "zui", "gui", "window"]
categories = ["gui"]
description = "[WIP] ZedUI windowing utilities."
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
cfg-if = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.18"
objc = "0.2"
